[package]
name = "write"
version = "0.1.0"
authors = ["Salvador Guzman <guzmansalv@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[[bin]]
name = "write"
path = "src/main.rs"

[dependencies]
chrono = "0.4.6"
postgres = { version = "0.15.2", features = ["with-chrono"] }
quick-protobuf = "0.6.3"
